tests/integration/snapshots/integration__conformance__i_structure_utf-8_bom_empty_object.json-format---uglify.snap
---
source: tests/integration/conformance.rs
expression: output.snapshot_display()
---
args: ["format", "--uglify"]
status: 1
success: false
stdin ---
﻿{}
stdout ---

stderr ---
error: unexpected character `﻿`. expected start of a json value
 --> stdin:1:1
  |
1 | ﻿{}
  | ^
