tests/integration/snapshots/integration__conformance__n_array_1_true_without_comma.json.snap
---
source: tests/integration/conformance.rs
expression: output
---
args: ["format"]
status: 1
success: false
stdin ---
[1 true]
stdout ---

stderr ---
error: expected entry or closed delimiter `]`, found `true`
 --> stdin:1:4
  |
1 | [1 true]
  | -  ^^^^
  | |
  | expected due to `[`
