tests/integration/snapshots/integration__conformance__n_array_double_comma.json-format.snap
---
source: tests/integration/conformance.rs
expression: output.snapshot_display()
---
args: ["format"]
status: 1
success: false
stdin ---
[1,,2]
stdout ---

stderr ---
error: expected json value, found `,`
 --> stdin:1:4
  |
1 | [1,,2]
  |   -^
  |   |
  |   expected due to `,`
